--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
                 Recipe Book
             </a>
         </div>
-        <div class="collapse navbar-collapse">
+        <div class="navbar-default">
             <ul class="nav navbar-nav">
                 <li>
                     <a href="#">
